# TinyOS64V2

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh  build.sh  run.sh
linker/: linker.ld
src/: acpi.h  allocator.cpp  allocator.h  boot.asm  commands.cpp  commands.h  efi.h  efi_base.h  efi_bootservices.h  efi_console.h  efi_pci.h  efi_runtimeservices.h  hdacodec.cpp  hdacodec.h  helpers.h  main.cpp  myprint.cpp  myprint.h  pci.cpp  pci.h  uefi.asm
